--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/
-  libs/font-awesome/6.2.1/css/all.min.css"/>
+  <script src="https://kit.fontawesome.com/c080f488a5.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family
   =Material+Symbols+Outlined:opsz,wght,
   FILL,GRAD@20..48,100..700,0..1,-50..200"/>
